<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/accountEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:paddingTop="50dp"
        android:text="@string/email_n_a"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/devices_limit_n_a"
        android:textColor="@color/black"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/plan_n_a"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/expDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/exp_date_n_a"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:maxLines="2"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:progressTint="@color/colorPrimary"
        android:visibility="invisible" />


</LinearLayout>