<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:subtitleTextAppearance="@style/ToolbarSubTitle"
        app:subtitleTextColor="#FFFFFF"
        app:title="@string/txt_forgot_password"
        app:titleTextColor="#FFFFFF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:lineSpacingExtra="5sp"
        android:text="@string/password_message"
        android:textSize="17sp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_background"
        android:cursorVisible="true"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:drawableTint="#000000"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textSize="16dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="25dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="0dp"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:padding="0dp"
            android:text="@string/submit"
            android:textSize="18dp"
            app:backgroundTint="@color/colorPrimary" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:visibility="invisible" />

    </RelativeLayout>


</LinearLayout>