<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/app_logo"
        android:padding="10dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mainCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"

            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:autoSizeMinTextSize="13sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif"
                android:paddingLeft="10dp"
                android:text="@string/sign_in"
                android:textColor="#000000"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_background"
                android:cursorVisible="true"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="#000000"
                android:fontFamily="sans-serif"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textSize="15dp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_background">


                <ImageView
                    android:id="@+id/leftIcon"
                    android:layout_width="42dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_lock_outline_black_24dp" />

                <ImageView
                    android:id="@+id/rightIcon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:onClick="logPasswordTransform"
                    android:src="@drawable/eye_cross" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_toStartOf="@id/rightIcon"
                    android:layout_toEndOf="@id/leftIcon"
                    android:cursorVisible="true"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#000000"
                    android:textSize="15dp" />


            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/rememberPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:checked="true"
                android:text="@string/remember_password"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/languageSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/black"
                android:entries="@array/languages"
                android:padding="10dp"
                android:spinnerMode="dropdown" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:autoSizeMaxTextSize="17sp"
                android:autoSizeMinTextSize="13sp"
                android:autoSizeTextType="uniform"
                android:drawablePadding="0dp"
                android:fontFamily="sans-serif-medium"
                android:includeFontPadding="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/login"
                android:textSize="17dp"
                app:backgroundTint="@color/colorPrimaryDark" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:autoSizeMinTextSize="13sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-medium"
                android:padding="5sp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="#FFFFFF"
            android:visibility="invisible" />


    </RelativeLayout>

</RelativeLayout>